MC: added TransmittedMTOfRhoAndSubregionHist detector and associated unit test, matlab post-processing code for Bernard's group

--- a/src/Vts.Desktop/Vts.Desktop.csproj
+++ b/src/Vts.Desktop/Vts.Desktop.csproj
@@ -706,6 +706,9 @@
     <Compile Include="..\Vts\MonteCarlo\Detectors\TOfRhoDetector.cs">
       <Link>MonteCarlo\Detectors\TOfRhoDetector.cs</Link>
     </Compile>
+    <Compile Include="..\Vts\MonteCarlo\Detectors\TransmittedMTOfRhoAndSubregionHistDetector.cs">
+      <Link>MonteCarlo\Detectors\TransmittedMTOfRhoAndSubregionHistDetector.cs</Link>
+    </Compile>
     <Compile Include="..\Vts\MonteCarlo\Enums.cs">
       <Link>MonteCarlo\Enums.cs</Link>
     </Compile>
