--- a/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
+++ b/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
@@ -240,6 +240,9 @@
     <Compile Include="..\Vts.Test\MonteCarlo\Detectors\DAWLayersDetectorsTests.cs">
       <Link>MonteCarlo\Detectors\DAWLayersDetectorsTests.cs</Link>
     </Compile>
+    <Compile Include="..\Vts.Test\MonteCarlo\Detectors\DAWLayersDynamicDetectorsTests.cs">
+      <Link>MonteCarlo\Detectors\DAWLayersDynamicDetectorsTests.cs</Link>
+    </Compile>
     <Compile Include="..\Vts.Test\MonteCarlo\Detectors\DAWSphereDetectorsTests.cs">
       <Link>MonteCarlo\Detectors\DAWSphereDetectorsTests.cs</Link>
     </Compile>
