MC: Modifications to the dynamic MT detectors to tally FractionalMT for only dynamic scattering events not static events (which can be determined as the complement). Added unit tests for the cylindrical and Cartesian dynamic MT detectors. Found a bug in the original Cartesian MT detectors in the normalization of FractionalMT, areaNorm was being divided twice.  Added unit tests to test that for a given region, the sum of the FractionalMT over the fractions gives back Mean(rho,mt).

--- a/src/Vts.Desktop/Vts.Desktop.csproj
+++ b/src/Vts.Desktop/Vts.Desktop.csproj
@@ -664,6 +664,9 @@
     <Compile Include="..\Vts\MonteCarlo\Detectors\ReflectedDynamicMTOfRhoAndSubregionDetector.cs">
       <Link>MonteCarlo\Detectors\ReflectedDynamicMTOfRhoAndSubregionDetector.cs</Link>
     </Compile>
+    <Compile Include="..\Vts\MonteCarlo\Detectors\ReflectedDynamicMTOfXAndYAndSubregionDetector.cs">
+      <Link>MonteCarlo\Detectors\ReflectedDynamicMTOfXAndYAndSubregionDetector.cs</Link>
+    </Compile>
     <Compile Include="..\Vts\MonteCarlo\Detectors\ReflectedMTOfRhoAndSubRegionHistDetector.cs">
       <Link>MonteCarlo\Detectors\ReflectedMTOfRhoAndSubRegionHistDetector.cs</Link>
     </Compile>
@@ -720,6 +723,9 @@
     </Compile>
     <Compile Include="..\Vts\MonteCarlo\Detectors\TransmittedDynamicMTOfRhoAndSubregionDetector.cs">
       <Link>MonteCarlo\Detectors\TransmittedDynamicMTOfRhoAndSubregionDetector.cs</Link>
+    </Compile>
+    <Compile Include="..\Vts\MonteCarlo\Detectors\TransmittedDynamicMTOfXAndYAndSubregionDetector.cs">
+      <Link>MonteCarlo\Detectors\TransmittedDynamicMTOfXAndYAndSubregionDetector.cs</Link>
     </Compile>
     <Compile Include="..\Vts\MonteCarlo\Detectors\TransmittedMTOfRhoAndSubregionHistDetector.cs">
       <Link>MonteCarlo\Detectors\TransmittedMTOfRhoAndSubregionHistDetector.cs</Link>
