--- a/src/Vts/Vts.csproj
+++ b/src/Vts/Vts.csproj
@@ -257,6 +257,7 @@
     <Compile Include="MonteCarlo\DataStructures\SimulationInputProvider.cs" />
     <Compile Include="MonteCarlo\DataStructures\SimulationStatistics.cs" />
     <Compile Include="MonteCarlo\DataStructures\SourceInputProvider.cs" />
+    <Compile Include="MonteCarlo\Detectors\FluenceOfXAndYAndZAndOmegaDetector.cs" />
     <Compile Include="MonteCarlo\Detectors\TransmittedDynamicMTOfXAndYAndSubregionDetector.cs" />
     <Compile Include="MonteCarlo\Detectors\ReflectedDynamicMTOfXAndYAndSubregionDetector.cs" />
     <Compile Include="MonteCarlo\Detectors\TransmittedDynamicMTOfRhoAndSubregionDetector.cs" />
