--- a/src/Vts/Vts.csproj
+++ b/src/Vts/Vts.csproj
@@ -473,6 +473,8 @@
     <Compile Include="MonteCarlo\Tissues\EllipsoidTissueRegion.cs" />
     <Compile Include="MonteCarlo\Tissues\LayerTissueRegion.cs" />
     <Compile Include="MonteCarlo\Tissues\MultiLayerTissue.cs" />
+    <Compile Include="MonteCarlo\Tissues\SingleEllipsoidTissue.cs" />
+    <Compile Include="MonteCarlo\Tissues\MultiEllipsoidTissue.cs" />
     <Compile Include="MonteCarlo\Tissues\SingleInclusionTissue.cs" />
     <Compile Include="MonteCarlo\Tissues\TissueBase.cs" />
     <Compile Include="MonteCarlo\Tissues\VoxelTissueRegion.cs" />
