--- a/src/Vts/packages.config
+++ b/src/Vts/packages.config
@@ -6,6 +6,7 @@
   <package id="MathNet.Numerics" version="3.0.2" targetFramework="sl50" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="sl50" />
   <package id="NLog" version="3.1.0.0" targetFramework="sl50" />
+  <package id="Portable.Meta.Numerics" version="3.1.0.73149" targetFramework="sl50" />
   <package id="Rx-Core" version="2.2.4" targetFramework="sl50" />
   <package id="Rx-Interfaces" version="2.2.4" targetFramework="sl50" />
   <package id="Rx-Linq" version="2.2.4" targetFramework="sl50" />
