--- a/src/Vts.Test/packages.config
+++ b/src/Vts.Test/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="MathNet.Numerics" version="3.0.2" targetFramework="sl50" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="sl50" />
+  <package id="Portable.Meta.Numerics" version="3.1.0.73149" targetFramework="sl50" />
 </packages>
