MC: Added TOfFx detector, unit test, and matlab post-processing

--- a/src/Vts.Desktop/Vts.Desktop.csproj
+++ b/src/Vts.Desktop/Vts.Desktop.csproj
@@ -731,6 +731,9 @@
     <Compile Include="..\Vts\MonteCarlo\Detectors\TOfAngleDetector.cs">
       <Link>MonteCarlo\Detectors\TOfAngleDetector.cs</Link>
     </Compile>
+    <Compile Include="..\Vts\MonteCarlo\Detectors\TOfFxDetector.cs">
+      <Link>MonteCarlo\Detectors\TOfFxDetector.cs</Link>
+    </Compile>
     <Compile Include="..\Vts\MonteCarlo\Detectors\TOfRhoAndAngleDetector.cs">
       <Link>MonteCarlo\Detectors\TOfRhoAndAngleDetector.cs</Link>
     </Compile>
