Spent an hour hooking up a building Vts.NetStandard library project. - Needs VS 2017 Preview 1 or later (see instructions here: https://www.microsoft.com/net/core#windowsvs2017) - Note that Silverlight is no longer supported in VS 2017, at least for now (boo, hiss) - Haven't dealt with specifying build actions/types for resource files - Updated the project to use the latest MathNet.Numerics (3.19.0) - Had to update two lines of code: 1) unused reference to Monte Carlo lib from IForwardSolver.cs, and 2) update Linear interp call in ReffCalculator.cs - Could be drop-in replacement for the new WPF library...worth a try, once the references are embedded correctly - Haven't figured out what happens when the NuGet dependencies used don't support the netstandard2.0 profile for non-desktop (.NET 4.7) runtimes, such as .NET Core on Windows/Mac/Linux/Xamarin. - Haven't used the API Port tool yet, which will shed light on the bullet above: https://github.com/Microsoft/dotnet-apiport

--- a/src/Vts.MonteCarlo.GenerateReferenceData/Vts.MonteCarlo.GenerateReferenceData.csproj
+++ b/src/Vts.MonteCarlo.GenerateReferenceData/Vts.MonteCarlo.GenerateReferenceData.csproj
@@ -58,6 +58,9 @@
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="MathNet.Numerics, Version=3.19.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\MathNet.Numerics.3.19.0\lib\net40\MathNet.Numerics.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -92,6 +95,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
