--- a/src/Vts.MonteCarlo.PostProcessor/Vts.MonteCarlo.PostProcessor.csproj
+++ b/src/Vts.MonteCarlo.PostProcessor/Vts.MonteCarlo.PostProcessor.csproj
@@ -54,6 +54,9 @@
     <DocumentationFile>bin\Release\mc_post.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="MathNet.Numerics, Version=3.19.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\MathNet.Numerics.3.19.0\lib\net40\MathNet.Numerics.dll</HintPath>
+    </Reference>
     <Reference Include="NLog, Version=3.1.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\NLog.3.1.0.0\lib\net40\NLog.dll</HintPath>
