--- a/src/Vts.Desktop.Test/packages.config
+++ b/src/Vts.Desktop.Test/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="MathNet.Numerics" version="3.19.0" targetFramework="net40" />
+  <package id="MathNet.Numerics" version="3.20.0-beta01" targetFramework="net40" />
   <package id="Meta.Numerics" version="3.1.0" targetFramework="net40" />
-  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net40" />
   <package id="NUnit" version="2.6.3" targetFramework="net40" />
 </packages>
