--- a/src/Vts.Desktop/packages.config
+++ b/src/Vts.Desktop/packages.config
@@ -4,10 +4,10 @@
   <package id="CommonServiceLocator" version="1.2" targetFramework="net40" />
   <package id="csmpfit" version="1.0.0" targetFramework="net40" />
   <package id="DotNetZip" version="1.9.3" targetFramework="net40" />
-  <package id="MathNet.Numerics" version="3.19.0" targetFramework="net40" />
+  <package id="MathNet.Numerics" version="3.20.0-beta01" targetFramework="net40" />
   <package id="Meta.Numerics" version="3.1.0" targetFramework="net40" />
-  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net40" />
-  <package id="NLog" version="3.1.0.0" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net40" />
+  <package id="NLog" version="4.4.11" targetFramework="net40" />
   <package id="Rx-Core" version="2.2.4" targetFramework="net40" />
   <package id="Rx-Interfaces" version="2.2.4" targetFramework="net40" />
   <package id="Rx-Linq" version="2.2.4" targetFramework="net40" />
