--- a/src/Vts.NetStandard/Vts.NetStandard.csproj
+++ b/src/Vts.NetStandard/Vts.NetStandard.csproj
@@ -443,10 +443,10 @@
   <ItemGroup>
     <PackageReference Include="csmpfit" Version="1.1.0" />
     <PackageReference Include="DotNetZip" Version="1.10.1" />
-    <PackageReference Include="MathNet.Numerics" Version="3.19.0" />
+    <PackageReference Include="MathNet.Numerics" Version="3.20.0-beta01" />
     <PackageReference Include="Meta.Numerics" Version="3.1.0" />
-    <PackageReference Include="Newtonsoft.Json" Version="10.0.2" />
-    <PackageReference Include="NLog" Version="4.4.10" />
+    <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
+    <PackageReference Include="NLog" Version="4.4.11" />
     <PackageReference Include="System.Reactive" Version="3.1.1" />
     <PackageReference Include="Unity" Version="4.0.1" />
   </ItemGroup>
