--- a/src/Vts.Desktop.Test/packages.config
+++ b/src/Vts.Desktop.Test/packages.config
@@ -4,4 +4,5 @@
   <package id="Meta.Numerics" version="3.1.0" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net40" />
   <package id="NUnit" version="3.10.1" targetFramework="net40" />
+  <package id="NUnit3TestAdapter" version="3.10.0" targetFramework="net40" />
 </packages>
